Added info and images to recipe pages
Added an image, description, ingredients list, and list of cooking
steps to all 3 recipes. Also added a storage directory for the images.
Made list of links on main page into an actual unordered list for
readability

--- a/recipes/eggDropSoup.html
+++ b/recipes/eggDropSoup.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Egg Drop Soup</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Egg Drop Soup</title>
+  </head>
 
-    <body>
-        <h1>Egg Drop Soup</h1>
-    </body>
+  <body>
+    <h1>Egg Drop Soup</h1>
+    <img src="/images/eggDropSoup.jpeg" alt="Bowl of Egg Drop Soup" />
+
+    <p>
+      Egg drop soup is a favorite of mine. After many trips to different Chinese
+      restaurants to enjoy it, I decided to create the ultimate egg drop soup
+      recipe at home. Sesame oil is the key! I hope you like it as much as I do.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 cup chicken broth</li>
+      <li>¼ teaspoon sesame oil</li>
+      <li>¼ teaspoon soy sauce</li>
+      <li>2 teaspoons water (optional)</li>
+      <li>1 teaspoon cornstarch (optional)</li>
+      <li>1 egg, beaten</li>
+      <li>½ teaspoon ground white pepper (Optional)</li>
+      <li>⅛ teaspoon salt (Optional)</li>
+      <li>1 teaspoon chopped fresh chives</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        Combine chicken broth, soy sauce, and sesame oil in a small saucepan
+        over medium heat; bring to a boil.
+      </li>
+      <li>
+        Stir water and cornstarch together in a small bowl until cornstarch is
+        dissolved; pour into boiling broth. Stir in food coloring. Slowly pour
+        in beaten egg, stirring constantly; season with white pepper and salt.
+        Serve hot, garnished with fresh chives.
+      </li>
+    </ol>
+  </body>
 </html>
