--- a/recipes/greenBeanCasserole.html
+++ b/recipes/greenBeanCasserole.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Green Bean Casserole</title>
-    </head>
-    <body>
-        <h1>Green Bean Casserole</h1>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Green Bean Casserole</title>
+  </head>
+  <body>
+    <h1>Green Bean Casserole</h1>
+    <img src="/images/greenBeanCass.jpeg" alt="Dish of Green Bean Casserole" />
+    <p>
+      It is the dish everyone is expecting on the holidays, but it is so easy to
+      make, you can serve it any day. Created by Campbell Test Kitchen Manager
+      Dorcas Reilly in 1955, its creamy, smooth sauce and unmatchable flavor
+      combined with its simplicity makes Green Bean Casserole so appealing. Just
+      five ingredients and 10 minutes to put together, this family pleasing side
+      has been a favorite for over 60 years. Looking to try a new spin on the
+      traditional? Then try: Bacon & Cheddar Green Bean Casserole.
+    </p>
+
+    <h2><b>Ingredients</b></h2>
+    <ul>
+      <li>
+        1 can (10 1/2 ounces) Campbell’s® Condensed Cream of Mushroom Soup or
+        98% Fat Free Cream of Mushroom Soup or Condensed Unsalted Cream of
+        Mushroom Soup
+      </li>
+      <li>1/2 cup milk</li>
+      <li>1 teaspoon soy sauce</li>
+      <li>4 cups cooked cut green beans</li>
+      <li>
+        1 1/3 cups French's® French Fried Onions (amount divided in recipe steps
+        below)
+      </li>
+    </ul>
+
+    <h2><b>Steps</b></h2>
+
+    <ol>
+      <li>Heat the oven to 350°F.  Stir the soup, milk, soy sauce, beans and 2/3 cup onions in a 1 1/2-quart casserole.  Season the mixture with salt and pepper.</li>
+      <li>Bake for 25 minutes or until hot.  Stir the bean mixture.  Sprinkle with the remaining 2/3 cup onions.</li>
+      <li>Bake for another 5 minutes or until the onions are golden brown.</li>
+    </ol>
+  </body>
 </html>
