--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Odin Recipes</h1>
-</body>
+    <ul>
+      <li>
+        <a href="/recipes/chocolateChipCookies.html">
+          Chocolate Chip Cookies Recipe
+        </a>
+      </li>
+
+      <li>
+        <a href="/recipes/eggDropSoup.html">Egg Drop Soup Recipe</a>
+      </li>
+      <li>
+        <a href="/recipes/greenBeanCasserole.html">Green Bean Casserole</a>
+      </li>
+    </ul>
+  </body>
 </html>
