Added CSS Styling
Created a main stylesheet for the main directory page, and created a
stylesheet for the recipe pages. All recipes just use the recipe
stylesheet for simplicity. Also added a header and recipes class to
certain elements on the main page for styling.

--- a/recipes/chocolateChipCookies.html
+++ b/recipes/chocolateChipCookies.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/recipes.css" />
     <title>Chocolate Chip Cookies</title>
   </head>
   <body>
+    <div class="header">
     <h1>Chocolate Chip Cookies</h1>
+    </div>
     <img
       src="/images/chocoChipCookies.jpg"
       alt="Chocolate Chip Cookies with Cup of Milk"
     />
+    <div>
     <p>
       We named this recipe “Ultimate Chocolate Chip Cookies,” because it’s got
       everything a cookie connoisseur could possibly ask for. With a texture
@@ -17,7 +23,7 @@
       favorite chocolate chip cookie recipe that’s been top-rated by hundreds of
       satisfied home cooks.
     </p>
-
+  </div>
     <h2>Ingredients</h2>
     <ul>
       <li>2 1/4 cups all purpose flour</li>
