--- a/recipes/greenBeanCasserole.html
+++ b/recipes/greenBeanCasserole.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/recipes.css" />
+
     <title>Green Bean Casserole</title>
+    
   </head>
   <body>
     <h1>Green Bean Casserole</h1>
